# chess-nanozero

./: .gitignore  CLAUDE.md  CLOUD_TRAINING.md  README.md  RESULTS.md  pyproject.toml  requirements.txt
configs/: medium.yaml  tiny.yaml
results/: RESULTS.md  vs_sf1320_20260304_162110.pgn  vs_sf1320_20260304_162628.pgn  vs_sf1320_20260305_104512.pgn  vs_sf1500_20260304_165135.pgn  vs_sf1700_20260304_185038.pgn
scripts/: benchmark_inference.py  export_onnx.py  play_uci.py  prepare_data.py  quantize_onnx.py  train_step5.py  train_supervised.py
src/agents/: alphazero_agent.py
src/game/: chess_game.py  encoding.py
src/mcts/: mcts.py  node.py
src/neural_net/: losses.py  model.py  onnx_model.py
src/training/supervised/: dataset.py  prepare_data.py  trainer.py
src/uci/: uci_engine.py
tests/: test_chess_game.py  test_data_pipeline.py  test_encoding.py  test_mcts.py  test_model.py  test_uci.py  test_web.py
tools/: run_tournament.sh
web/: app.py
web/static/: index.html  main.js  style.css
