[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chess-alphazero"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "python-chess>=1.10",
    "numpy>=1.24",
    "pyyaml>=6.0",
    "tqdm>=4.65",
    "onnx>=1.14",
    "onnxruntime>=1.15",
]

[project.optional-dependencies]
dev = ["pytest>=7.3", "pytest-cov>=4.1"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
